@@ -1,1 +1,5 @@
 tests/
+.Rproj.user
+.RData
+.Rhistory
+readABF.Rproj
