@@ -1,6 +1,6 @@
 Package: readABF
 Title: Loads Axon Binary Files
-Version: 1.0.2
+Version: 1.0.3
 Authors@R: c(person("Stanislav", "Syekirin", role = c("aut", "cre"), email = "syekirin@gmail.com"),
    person("Florian", "Pein", role = "ctb", email = "fpein@uni-goettingen.de"))
 Description: Loads Axon Binary Files (both 'ABF' and 'ABF2') created by Axon Instruments/Molecular Devices software such as 'pClamp'.
